--- a/index.html
+++ b/index.html
@@ -670,6 +670,177 @@
 		</div><!--//container-->
 	</section><!--//sponsors-section-->
 
+	<section id="speakers-section" class="speakers-section section">
+		<div class="container">
+			<h3 class="section-heading text-center mb-3">Organisers</h3>
+			<div class="section-intro text-center single-col-max mx-auto mb-5">Meet the team behind this successful event.</div>
+			<div class="row">
+				<div class="col-12 col-md-6 col-lg-3 mb-4">
+					<div class="card rounded-0">
+						<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/organisers/sigu.jpg" class="card-img-top rounded-0" alt=""></a>
+						<div class="card-body">
+							<h5 class="card-title mb-2">Sigu Magwa</h5>
+							<div class="card-text mb-3">
+								<div class="meta">CTO && Senior Software Developer</div>
+								<div class="meta">Podii Consultants Ltd.</div>
+							</div><!--//card-text-->
+							<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+						</div><!--//card-->
+						<div class="card-footer text-muted">
+							<ul class="social-list list-inline mb-0">
+								<li class="list-inline-item"><a  href="https://twitter.com/s_igu"><i class="fab fa-twitter fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://www.linkedin.com/in/sigu/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://github.com/sigu"><i class="fab fa-github fa-fw"></i></a></li>
+							</ul><!--//social-list-->
+						</div>
+					</div><!--//card-->
+				</div><!--//col-->
+				<div class="col-12 col-md-6 col-lg-3 mb-4">
+					<div class="card rounded-0">
+						<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/organisers/chantelle.JPG" class="card-img-top rounded-0" alt=""></a>
+						<div class="card-body">
+							<h5 class="card-title mb-2">Chantelle Kyendereta</h5>
+							<div class="card-text mb-3">
+								<div class="meta">UI/UX Developer</div>
+								<div class="meta">Podii Consultants Ltd.</div>
+							</div><!--//card-text-->
+							<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+						</div><!--//card-->
+						<div class="card-footer text-muted">
+							<ul class="social-list list-inline mb-0">
+								<li class="list-inline-item"><a  href="https://twitter.com/cckyendereta"><i class="fab fa-twitter fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://www.linkedin.com/in/chantelle-kyendereta-70993719b/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://github.com/kyendereta/"><i class="fab fa-github fa-fw"></i></a></li>
+							</ul><!--//social-list-->
+						</div>
+					</div><!--//card-->
+				</div><!--//col-->
+				<div class="col-12 col-md-6 col-lg-3 mb-4">
+					<div class="card rounded-0">
+						<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/organisers/mush.jpg" class="card-img-top rounded-0" alt=""></a>
+						<div class="card-body">
+							<h5 class="card-title mb-2">Collins Mucheru</h5>
+							<div class="card-text mb-3">
+								<div class="meta">FullStack / DevOps engineer, Technical Lead</div>
+								<div class="meta">Qhala</div>
+							</div><!--//card-text-->
+							<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+						</div><!--//card-->
+						<div class="card-footer text-muted">
+							<ul class="social-list list-inline mb-0">
+								<li class="list-inline-item"><a  href="https://twitter.com/LeMusicalAddict"><i class="fab fa-twitter fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://www.linkedin.com/in/cmush"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://github.com/cmush"><i class="fab fa-github fa-fw"></i></a></li>
+							</ul><!--//social-list-->
+						</div>
+					</div><!--//card-->
+				</div><!--//col-->
+				<div class="col-12 col-md-6 col-lg-3 mb-4">
+					<div class="card rounded-0">
+						<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/organisers/wanjiku.jpg" class="card-img-top rounded-0" alt=""></a>
+						<div class="card-body">
+							<h5 class="card-title mb-2">Wanjiku Macharia</h5>
+							<div class="card-text mb-3">
+								<div class="meta">Precision Development </div>
+								<div class="meta">Startup Week</div>
+							</div><!--//card-text-->
+							<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+						</div><!--//card-->
+						<div class="card-footer text-muted">
+							<ul class="social-list list-inline mb-0">
+								<li class="list-inline-item"><a  href="https://twitter.com/Wanjiku_Mac"><i class="fab fa-twitter fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://www.linkedin.com/in/wanjiku-macharia-b4b95a94"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://gitlab.com/wanjiku_macharia"><i class="fab fa-github fa-fw"></i></a></li>
+							</ul><!--//social-list-->
+						</div>
+					</div><!--//card-->
+				</div><!--//col-->
+				<div class="col-12 col-md-6 col-lg-3 mb-4">
+					<div class="card rounded-0">
+						<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/organisers/okoth.jpg" class="card-img-top rounded-0" alt=""></a>
+						<div class="card-body">
+							<h5 class="card-title mb-2">Okoth Kong'o</h5>
+							<div class="card-text mb-3">
+								<div class="meta">Software Developer</div>
+								<div class="meta"></div>
+							</div><!--//card-text-->
+							<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+						</div><!--//card-->
+						<div class="card-footer text-muted">
+							<ul class="social-list list-inline mb-0">
+								<li class="list-inline-item"><a  href="https://twitter.com/okothkongo"><i class="fab fa-twitter fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://www.linkedin.com/in/okoth-kongo-232633163/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://github.com/okothkongo/"><i class="fab fa-github fa-fw"></i></a></li>
+							</ul><!--//social-list-->
+						</div>
+					</div><!--//card-->
+				</div><!--//col-->
+				<div class="col-12 col-md-6 col-lg-3 mb-4">
+					<div class="card rounded-0">
+						<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/organisers/tracey.jpg" class="card-img-top rounded-0" alt=""></a>
+						<div class="card-body">
+							<h5 class="card-title mb-2">Tracey Onim</h5>
+							<div class="card-text mb-3">
+								<div class="meta">Software Engineer</div>
+								<div class="meta">Podii Consultants Ltd</div>
+							</div><!--//card-text-->
+							<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+						</div><!--//card-->
+						<div class="card-footer text-muted">
+							<ul class="social-list list-inline mb-0">
+								<li class="list-inline-item"><a  href="https://twitter.com/PendoTracey"><i class="fab fa-twitter fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://www.linkedin.com/in/tracey-onim-420b3316a/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://github.com/TraceyOnim"><i class="fab fa-github fa-fw"></i></a></li>
+							</ul><!--//social-list-->
+						</div>
+					</div><!--//card-->
+				</div><!--//col-->
+				<div class="col-12 col-md-6 col-lg-3 mb-4">
+					<div class="card rounded-0">
+						<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/organisers/njoki.jpg" class="card-img-top rounded-0" alt=""></a>
+						<div class="card-body">
+							<h5 class="card-title mb-2">Njoki Kiarie</h5>
+							<div class="card-text mb-3">
+								<div class="meta">Software Developer</div>
+								<div class="meta">Qhala</div>
+							</div><!--//card-text-->
+							<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+						</div><!--//card-->
+						<div class="card-footer text-muted">
+							<ul class="social-list list-inline mb-0">
+								<li class="list-inline-item"><a  href="https://mobile.twitter.com/njoki_kiarieG"><i class="fab fa-twitter fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://www.linkedin.com/in/njoki-kiarie-4312528a"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://github.com/GraceKiarie"><i class="fab fa-github fa-fw"></i></a></li>
+							</ul><!--//social-list-->
+						</div>
+					</div><!--//card-->
+				</div><!--//col-->
+				<div class="col-12 col-md-6 col-lg-3 mb-4">
+					<div class="card rounded-0">
+						<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/organisers/pops.jpg" class="card-img-top rounded-0" alt=""></a>
+						<div class="card-body">
+							<h5 class="card-title mb-2">Pollet Obuya</h5>
+							<div class="card-text mb-3">
+								<div class="meta">Lead Developer</div>
+								<div class="meta">Podii Consultants Ltd.</div>
+							</div><!--//card-text-->
+							<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+						</div><!--//card-->
+						<div class="card-footer text-muted">
+							<ul class="social-list list-inline mb-0">
+								<li class="list-inline-item"><a  href="https://twitter.com/P_Obuya"><i class="fab fa-twitter fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://www.linkedin.com/in/pollet-obuya-664436127/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href=""><i class="fab fa-github fa-fw"></i></a></li>
+							</ul><!--//social-list-->
+						</div>
+					</div><!--//card-->
+				</div><!--//col-->
+			</div><!--//row-->
+			<div class="speakers-cta text-center py-3"><a class="btn btn-primary btn-lg" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/" target="_blank">Get Tickets</a></div>
+		</div><!--//container-->
+		
+	</section>
+
 	<footer class="footer py-5 theme-bg-primary">
 		<div class="container text-center">
 			
@@ -727,6 +898,39 @@
 			</div><!--//modal-content-->
 		</div><!--//modal-dialog-->
 	</div><!--//modal-->
+
+		<!-- Modal Organiser -->
+		<div class="modal modal-speaker modal-speaker-1" id="modal-speaker-1" tabindex="-1" role="dialog" aria-labelledby="speaker-1-ModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 id="speaker-1-ModalLabel" class="modal-title sr-only">Speaker Name</h4>
+					</div>
+					<div class="modal-body p-0">
+						<div class="media flex-column flex-md-row theme-bg-light p-4 p-lg-5">
+							<img class="profile-image mb-3 mb-md-0 mr-md-4 rounded-circle mx-auto" src="assets/images/organisers/sigu.jpg" alt="" />
+							
+							<div class="media-body text-center text-md-left mx-auto">
+								<h2 class="name mb-2">Sigu Magwa</h2>
+								<div class="meta">CTO && Senior Software Developer</div>
+								<div class="meta mb-2">Podii Consultants Ltd</div>
+								<ul class="social-list list-inline mb-0">
+									<li class="list-inline-item"><a  href="https://twitter.com/s_igu"><i class="fab fa-twitter fa-fw"></i></a></li>
+									<li class="list-inline-item"><a  href="https://www.linkedin.com/in/sigu"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+									<li class="list-inline-item"><a  href="https://github.com/sigu"><i class="fab fa-github fa-fw"></i></a></li>
+								</ul><!--//social-list--> 
+							</div><!--//media-body-->
+						</div><!--//media-->
+						
+						<div class="desc p-4 p-lg-5">
+							<p>Sigu's bio </p>
+							<p class="mb-0">Sigu is a senior software developer with 7 years experience.</p>
+						</div>
+					</div><!--//modal-body-->
+				</div><!--//modal-content-->
+			</div><!--//modal-dialog-->
+		</div><!--//modal-->
 	
 	<!-- Javascript -->          
 	<script src="assets/plugins/jquery-3.4.1.min.js"></script>
