few fixes, added links
 fixed seo issues, added hero bg

 fixed responsive issues

--- a/schedule.html
+++ b/schedule.html
@@ -69,9 +69,14 @@
   <div class="branding">
     <div class="container-fluid">
       <nav class="main-nav navbar navbar-expand-lg">
-        <div class="site-logo"><a class="scrollto" href="#hero-block"><img class="logo-icon" src="assets/images/elixir-logo-without-africa-icon.png" alt="logo"></a></div>
+        <div class="site-logo">
+          <a class="scrollto" href="/#hero-block">
+            <img class="logo-icon d-none d-sm-none d-lg-block" src="assets/images/elixir-logo-without-africa-icon.png" alt="logo">
+            <img class="logo-icon-sm d-lg-none d-sm-block" src="assets/images/Square-elixir-logo.png" alt="logo">
+          </a>
+        </div>
 
-        <div class="navbar-btn order-lg-2"><a class="btn btn-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/" target="_blank">Tickets</a></div>
+        <div class="navbar-btn order-lg-2"><a class="btn btn-secondary" href="http://bit.ly/elixir-conf-africa" target="_blank">Tickets</a></div>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -84,7 +89,6 @@
             <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
             <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
             <li class="nav-item"><a class="nav-link scrollto" href="/#tickets-section">Tickets</a></li>
-            <li class="nav-item"><a class="nav-link scrollto" href="/#venue-section">Venue</a></li>
             <li class="nav-item"><a class="nav-link scrollto" href="/#sponsors-section">Sponsors</a></li>
           </ul><!--//nav-->
         </div><!--//navabr-collapse-->
@@ -95,10 +99,11 @@
   </div><!--//branding-->
 </header><!--//header-->
 
-<div id="hero-topp" class="hero-block" style="background-image: url(assets/images/hero-2.jpg);">
+<div id="hero-topp" class="hero-block" style="background-image: url(assets/images/hero-1.png);">
   <div class="hero-text-block">
     <h1 class="hero-heading mb-5">Schedule</h1>
   </div>
+  <div class="hero-block-mask"></div>
 </div><!--//hero-block-->
 
 <section id="schedule-section" class="schedule-section section">
@@ -134,7 +139,7 @@
           <div class="meta">
             <h4 class="time mb-3">9:00 - 9:30</h4>
             <div class="profile">
-              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-1.jpg" alt=""></a>
+              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-1.jpg" alt="logo"></a>
               <div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">James Doe</a></div>
             </div><!--//profile-->
           </div><!--//meta-->
@@ -148,7 +153,7 @@
           <div class="meta">
             <h4 class="time mb-3">9:30 - 10:00</h4>
             <div class="profile">
-              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-2.jpg" alt=""></a>
+              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-2.jpg" alt="logo"></a>
               <div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Sarah Doe</a></div>
             </div><!--//profile-->
           </div><!--//meta-->
@@ -172,7 +177,7 @@
           <div class="meta">
             <h4 class="time mb-3">10:30 - 11:00</h4>
             <div class="profile">
-              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-3.jpg" alt=""></a>
+              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-3.jpg" alt="logo"></a>
               <div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Tim Doe</a></div>
             </div><!--//profile-->
           </div><!--//meta-->
@@ -186,7 +191,7 @@
           <div class="meta">
             <h4 class="time mb-3">11:00 - 12:00</h4>
             <div class="profile">
-              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-4.jpg" alt=""></a>
+              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-4.jpg" alt="logo"></a>
               <div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Josh Doe</a></div>
             </div><!--//profile-->
           </div><!--//meta-->
@@ -210,7 +215,7 @@
           <div class="meta">
             <h4 class="time mb-3">13:30 - 14:30</h4>
             <div class="profile">
-              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-5.jpg" alt=""></a>
+              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-5.jpg" alt="logo"></a>
               <div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Ling Doe</a></div>
             </div><!--//profile-->
           </div><!--//meta-->
@@ -224,7 +229,7 @@
           <div class="meta">
             <h4 class="time mb-3">14:30 - 15:30</h4>
             <div class="profile">
-              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-6.jpg" alt=""></a>
+              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-6.jpg" alt="logo"></a>
               <div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Andy Doe</a></div>
             </div><!--//profile-->
           </div><!--//meta-->
@@ -238,7 +243,7 @@
           <div class="meta">
             <h4 class="time mb-3">15:30 - 16:30</h4>
             <div class="profile">
-              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-7.jpg" alt=""></a>
+              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-7.jpg" alt="logo"></a>
               <div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Alice Doe</a></div>
             </div><!--//profile-->
           </div><!--//meta-->
@@ -252,7 +257,7 @@
           <div class="meta">
             <h4 class="time mb-3">16:30 - 17:30</h4>
             <div class="profile">
-              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-8.jpg" alt=""></a>
+              <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-8.jpg" alt="logo"></a>
               <div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Thomas Doe</a></div>
             </div><!--//profile-->
           </div><!--//meta-->
@@ -289,26 +294,16 @@
   <div class="container text-center">
 
     <ul class="social-list list-inline mb-4">
-      <li class="list-inline-item mr-3"><a href="#"><i class="fas fa-envelope"></i></a></li>
+      <!--				<li class="list-inline-item mr-3"><a href="#"><i class="fas fa-envelope"></i></a></li>-->
       <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
       <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
       <li class="list-inline-item mr-0"><a href="#"><i class="fab fa-youtube fa-fw"></i></a></li>
     </ul><!--//social-list-->
 
-
-    <ul class="footer-links list-inline mx-auto mb-4">
-      <li class="list-inline-item"><a href="#">Code of Conduct</a></li>
-      <li class="list-inline-item">|</li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item">|</li>
-      <li class="list-inline-item mr-0"><a href="#">Privacy</a></li>
-    </ul><!--//footer-link-->
-
-    <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-    <small class="copyright">Designed with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+    <small class="copyright">Made with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Kenya</a></small>
 
   </div><!--//container-->
-</footer>>
+</footer>
 
 <!-- Javascript -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
