--- a/about.html
+++ b/about.html
@@ -69,9 +69,14 @@
   <div class="branding">
     <div class="container-fluid">
       <nav class="main-nav navbar navbar-expand-lg">
-        <div class="site-logo"><a class="scrollto" href="#hero-block"><img class="logo-icon" src="assets/images/elixir-logo-without-africa-icon.png" alt="logo"></a></div>
+        <div class="site-logo">
+          <a class="scrollto" href="/#hero-block">
+            <img class="logo-icon d-none d-sm-none d-lg-block" src="assets/images/elixir-logo-without-africa-icon.png" alt="logo">
+            <img class="logo-icon-sm d-lg-none d-sm-block" src="assets/images/Square-elixir-logo.png" alt="logo">
+          </a>
+        </div>
 
-        <div class="navbar-btn order-lg-2"><a class="btn btn-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/" target="_blank">Tickets</a></div>
+        <div class="navbar-btn order-lg-2"><a class="btn btn-secondary" href="http://bit.ly/elixir-conf-africa" target="_blank">Tickets</a></div>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -84,7 +89,6 @@
             <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
             <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
             <li class="nav-item"><a class="nav-link scrollto" href="/#tickets-section">Tickets</a></li>
-            <li class="nav-item"><a class="nav-link scrollto" href="/#venue-section">Venue</a></li>
             <li class="nav-item"><a class="nav-link scrollto" href="/#sponsors-section">Sponsors</a></li>
           </ul><!--//nav-->
         </div><!--//navabr-collapse-->
@@ -95,10 +99,11 @@
   </div><!--//branding-->
 </header><!--//header-->
 
-<div id="hero-topp" class="hero-block" style="background-image: url(assets/images/hero-2.jpg);">
+<div id="hero-topp" class="hero-block" style="background-image: url(assets/images/hero-1.png);">
   <div class="hero-text-block">
     <h1 class="hero-heading mb-5">About</h1>
   </div>
+  <div class="hero-block-mask"></div>
 </div><!--//hero-block-->
 
 
@@ -126,7 +131,7 @@
     <div class="row">
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#" data-target="#"><img src="assets/images/organisers/sigu.jpg" class="card-img-top rounded-0" alt=""></a>
+          <div class="speaker-img"><img src="assets/images/organisers/sigu.jpg" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Sigu Magwa</h5>
             <div class="card-text mb-3">
@@ -145,7 +150,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#" data-target="#"><img src="assets/images/organisers/chantelle.JPG" class="card-img-top rounded-0" alt=""></a>
+          <div class="speaker-img"><img src="assets/images/organisers/chantelle.JPG" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Chantelle Kyendereta</h5>
             <div class="card-text mb-3">
@@ -164,7 +169,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#" data-target="#"><img src="assets/images/organisers/mush.jpg" class="card-img-top rounded-0" alt=""></a>
+          <div class="speaker-img"><img src="assets/images/organisers/mush.jpg" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Collins Mucheru</h5>
             <div class="card-text mb-3">
@@ -183,7 +188,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#" data-target="#"><img src="assets/images/organisers/wanjiku.jpg" class="card-img-top rounded-0" alt=""></a>
+          <div class="speaker-img"><img src="assets/images/organisers/wanjiku.jpg" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Wanjiku Macharia</h5>
             <div class="card-text mb-3">
@@ -202,7 +207,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#" data-target="#"><img src="assets/images/organisers/okoth.jpg" class="card-img-top rounded-0" alt=""></a>
+          <div class="speaker-img"><img src="assets/images/organisers/okoth.jpg" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Okoth Kong'o</h5>
             <div class="card-text mb-3">
@@ -221,7 +226,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#" data-target="#"><img src="assets/images/organisers/tracey.jpg" class="card-img-top rounded-0" alt=""></a>
+          <div class="speaker-img"><img src="assets/images/organisers/tracey.jpg" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Tracey Onim</h5>
             <div class="card-text mb-3">
@@ -240,7 +245,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#" data-target="#"><img src="assets/images/organisers/njoki.jpg" class="card-img-top rounded-0" alt=""></a>
+          <div class="speaker-img"><img src="assets/images/organisers/njoki.jpg" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Njoki Kiarie</h5>
             <div class="card-text mb-3">
@@ -259,7 +264,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#" data-target="#"><img src="assets/images/organisers/pops.jpg" class="card-img-top rounded-0" alt=""></a>
+          <div class="speaker-img"><img src="assets/images/organisers/pops.jpg" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Pollet Obuya</h5>
             <div class="card-text mb-3">
@@ -277,7 +282,6 @@
         </div><!--//card-->
       </div><!--//col-->
     </div><!--//row-->
-    <div class="speakers-cta text-center py-3"><a class="btn btn-primary btn-lg" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/" target="_blank">Get Tickets</a></div>
   </div><!--//container-->
 
 </section>
@@ -287,18 +291,18 @@
     <h3 class="section-heading text-center mb-3">Organizers</h3>
     <div class="section-intro text-center single-col-max mx-auto mb-5">Comapnies Organizing</div>
     <div class="row logos justify-content-center">
-      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-1.svg" alt=""></div>
-      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-2.svg" alt=""></div>
-      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-3.svg" alt=""></div>
-      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-4.svg" alt=""></div>
-      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-5.svg" alt=""></div>
-      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-6.svg" alt=""></div>
-      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-7.svg" alt=""></div>
-      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-8.svg" alt=""></div>
-      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-9.svg" alt=""></div>
-      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-10.svg" alt=""></div>
-      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-11.svg" alt=""></div>
-      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-12.svg" alt=""></div>
+      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-1.svg" alt="logo"></div>
+      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-2.svg" alt="logo"></div>
+      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-3.svg" alt="logo"></div>
+      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-4.svg" alt="logo"></div>
+      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-5.svg" alt="logo"></div>
+      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-6.svg" alt="logo"></div>
+      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-7.svg" alt="logo"></div>
+      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-8.svg" alt="logo"></div>
+      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-9.svg" alt="logo"></div>
+      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-10.svg" alt="logo"></div>
+      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-11.svg" alt="logo"></div>
+      <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-12.svg" alt="logo"></div>
     </div><!--//row-->
   </div><!--//container-->
 </section><!--//sponsors-section-->
@@ -307,23 +311,13 @@
   <div class="container text-center">
 
     <ul class="social-list list-inline mb-4">
-      <li class="list-inline-item mr-3"><a href="#"><i class="fas fa-envelope"></i></a></li>
+      <!--				<li class="list-inline-item mr-3"><a href="#"><i class="fas fa-envelope"></i></a></li>-->
       <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
       <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
       <li class="list-inline-item mr-0"><a href="#"><i class="fab fa-youtube fa-fw"></i></a></li>
     </ul><!--//social-list-->
 
-
-    <ul class="footer-links list-inline mx-auto mb-4">
-      <li class="list-inline-item"><a href="#">Code of Conduct</a></li>
-      <li class="list-inline-item">|</li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item">|</li>
-      <li class="list-inline-item mr-0"><a href="#">Privacy</a></li>
-    </ul><!--//footer-link-->
-
-    <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-    <small class="copyright">Designed with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+    <small class="copyright">Made with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Kenya</a></small>
 
   </div><!--//container-->
 </footer>
