--- a/speakers.html
+++ b/speakers.html
@@ -69,9 +69,14 @@
   <div class="branding">
     <div class="container-fluid">
       <nav class="main-nav navbar navbar-expand-lg">
-        <div class="site-logo"><a class="scrollto" href="#hero-block"><img class="logo-icon" src="assets/images/elixir-logo-without-africa-icon.png" alt="logo"></a></div>
+        <div class="site-logo">
+          <a class="scrollto" href="/#hero-block">
+            <img class="logo-icon d-none d-sm-none d-lg-block" src="assets/images/elixir-logo-without-africa-icon.png" alt="logo">
+            <img class="logo-icon-sm d-lg-none d-sm-block" src="assets/images/Square-elixir-logo.png" alt="logo">
+          </a>
+        </div>
 
-        <div class="navbar-btn order-lg-2"><a class="btn btn-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/" target="_blank">Tickets</a></div>
+        <div class="navbar-btn order-lg-2"><a class="btn btn-secondary" href="http://bit.ly/elixir-conf-africa" target="_blank">Tickets</a></div>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -84,7 +89,6 @@
             <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
             <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
             <li class="nav-item"><a class="nav-link scrollto" href="/#tickets-section">Tickets</a></li>
-            <li class="nav-item"><a class="nav-link scrollto" href="/#venue-section">Venue</a></li>
             <li class="nav-item"><a class="nav-link scrollto" href="/#sponsors-section">Sponsors</a></li>
           </ul><!--//nav-->
         </div><!--//navabr-collapse-->
@@ -95,10 +99,11 @@
   </div><!--//branding-->
 </header><!--//header-->
 
-<div id="hero-topp" class="hero-block" style="background-image: url(assets/images/hero-2.jpg);">
+<div id="hero-topp" class="hero-block" style="background-image: url(assets/images/hero-1.png);">
   <div class="hero-text-block">
     <h1 class="hero-heading mb-5">Speakers</h1>
   </div>
+  <div class="hero-block-mask"></div>
 </div><!--//hero-block-->
 
 <section id="speakers-section" class="speakers-section section">
@@ -108,7 +113,7 @@
     <div class="row">
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-1.jpg" class="card-img-top rounded-0" alt=""></a>
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-1.jpg" class="card-img-top rounded-0" alt="logo"></a>
           <div class="card-body">
             <h5 class="card-title mb-2">James Doe</h5>
             <div class="card-text mb-3">
@@ -128,7 +133,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-2.jpg" class="card-img-top rounded-0" alt=""></a>
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-2.jpg" class="card-img-top rounded-0" alt="logo"></a>
           <div class="card-body">
             <h5 class="card-title mb-2">Sarah Doe</h5>
             <div class="card-text mb-3">
@@ -148,7 +153,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-3.jpg" class="card-img-top rounded-0" alt=""></a>
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-3.jpg" class="card-img-top rounded-0" alt="logo"></a>
           <div class="card-body">
             <h5 class="card-title mb-2">Tim Doe</h5>
             <div class="card-text mb-3">
@@ -168,7 +173,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-4.jpg" class="card-img-top rounded-0" alt=""></a>
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-4.jpg" class="card-img-top rounded-0" alt="logo"></a>
           <div class="card-body">
             <h5 class="card-title mb-2">Josh Doe</h5>
             <div class="card-text mb-3">
@@ -188,7 +193,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-5.jpg" class="card-img-top rounded-0" alt=""></a>
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-5.jpg" class="card-img-top rounded-0" alt="logo"></a>
           <div class="card-body">
             <h5 class="card-title mb-2">Ling Doe</h5>
             <div class="card-text mb-3">
@@ -208,7 +213,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-6.jpg" class="card-img-top rounded-0" alt=""></a>
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-6.jpg" class="card-img-top rounded-0" alt="logo"></a>
           <div class="card-body">
             <h5 class="card-title mb-2">Andy Doe</h5>
             <div class="card-text mb-3">
@@ -228,7 +233,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-7.jpg" class="card-img-top rounded-0" alt=""></a>
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-7.jpg" class="card-img-top rounded-0" alt="logo"></a>
           <div class="card-body">
             <h5 class="card-title mb-2">Alice Doe</h5>
             <div class="card-text mb-3">
@@ -248,7 +253,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-8.jpg" class="card-img-top rounded-0" alt=""></a>
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/speaker-8.jpg" class="card-img-top rounded-0" alt="logo"></a>
           <div class="card-body">
             <h5 class="card-title mb-2">Thomas Doe</h5>
             <div class="card-text mb-3">
@@ -276,26 +281,17 @@
   <div class="container text-center">
 
     <ul class="social-list list-inline mb-4">
-      <li class="list-inline-item mr-3"><a href="#"><i class="fas fa-envelope"></i></a></li>
+      <!--				<li class="list-inline-item mr-3"><a href="#"><i class="fas fa-envelope"></i></a></li>-->
       <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
       <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
       <li class="list-inline-item mr-0"><a href="#"><i class="fab fa-youtube fa-fw"></i></a></li>
     </ul><!--//social-list-->
 
-
-    <ul class="footer-links list-inline mx-auto mb-4">
-      <li class="list-inline-item"><a href="#">Code of Conduct</a></li>
-      <li class="list-inline-item">|</li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item">|</li>
-      <li class="list-inline-item mr-0"><a href="#">Privacy</a></li>
-    </ul><!--//footer-link-->
-
-    <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-    <small class="copyright">Designed with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+    <small class="copyright">Made with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Kenya</a></small>
 
   </div><!--//container-->
 </footer>
+
 
 <!-- Modal Speaker -->
 <div class="modal modal-speaker modal-speaker-1" id="modal-speaker-1" tabindex="-1" role="dialog" aria-labelledby="speaker-1-ModalLabel" aria-hidden="true">
@@ -307,7 +303,7 @@
       </div>
       <div class="modal-body p-0">
         <div class="media flex-column flex-md-row theme-bg-light p-4 p-lg-5">
-          <img class="profile-image mb-3 mb-md-0 mr-md-4 rounded-circle mx-auto" src="assets/images/speakers/speaker-1.jpg" alt="" />
+          <img class="profile-image mb-3 mb-md-0 mr-md-4 rounded-circle mx-auto" src="assets/images/speakers/speaker-1.jpg" alt="logo" />
 
           <div class="media-body text-center text-md-left mx-auto">
             <h2 class="name mb-2">Speaker Name</h2>
