change text align from left to justify

--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
 <section id="about-section" class="about-section section theme-bg-light">
   <div class="container">
     <h3 class="section-heading text-center mb-3">About <img width="280px" style="margin-top: -35px;" src="/assets/images/lanscape-logo-purple.png" alt="img" ></h3>
-    <div class="section-intro single-col-max mx-auto mb-4 text-center">ElixirConfAfr is an annual conference bringing together BEAM enthusiasts for collaboration, networking and learning.
+    <div class="section-intro single-col-max mx-auto mb-4">ElixirConfAfr is an annual conference bringing together BEAM enthusiasts for collaboration, networking and learning.
       <br> <br>
       ElixirKenya brings you the first of many editions of Elixir Conference Africa. <br>
       This conference will be held virtually and is open to anyone from anywhere around the world, the event will incorporate among other things, technical and non technical talks, with the main focus being how Elixir has been used to craft technological solutions aimed at addressing problems and issues within and outside of Africa.
