fix landing section and remove previously section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<nav class="main-nav navbar navbar-expand-lg">
 					<div class="site-logo">
 						<a class="scrollto" href="#hero-block">
-							<img class="logo-icon d-none d-sm-none d-lg-block" src="assets/images/elixir-logo-without-africa-icon.png" alt="logo">
+							<img class="logo-icon d-none d-sm-none d-lg-block" src="assets/images/Elixir-logo-with-africa-icon.png" alt="logo">
 							<img class="logo-icon-sm d-lg-none d-sm-block" src="assets/images/Square-elixir-logo.png" alt="logo">
 						</a>
 					</div>
@@ -115,7 +115,7 @@
 		<div class="container">
 			<div class="hero-text-block">
 				<h1 class="hero-heading mb-2">ElixirConfAfr 2021</h1>
-				<div class="hero-meta mb-3"><i class="far fa-calendar-alt mr-2"></i>12 - 15 Oct <i class="fas fa-map-marker-alt mx-2"></i>New York, USA</div>
+				<div class="hero-meta mb-3"><i class="far fa-calendar-alt mr-2"></i>7th - 8th May <i class="fas fa-map-marker-alt mx-2"></i>Virtual</div>
 				<div class="hero-intro mb-4">The Premiere Elixir Conference in <br> Africa</div>
 				<div class="hero-cta">
 					<a class="btn btn-secondary btn-lg" href="http://bit.ly/elixir-conf-africa" target="_blank">Get Tickets</a>
@@ -142,25 +142,7 @@
 			<div class="about-cta text-center mb-5"><a class="btn btn-secondary btn-lg  mb-5" href="about.html">Read More</a></div>
 		</div><!--//container-->
 
-		<div class="media-block theme-bg-primary py-5">
-			<div class="container">
-				<h4 class="text-white text-center mb-3">Previously</h4>
-				<div class="section-intro text-center single-col-max mx-auto text-white mb-5">Conference videos and images from previous years is a great way to show people what to expect at the conference and entice them to join. You can host more media content on YouTube, Flickr or Instagram and link out to them in this section.</div>
-				<div class="row">
-					<div class="col-12 col-md-6 mb-3">
-						<div class="embed-responsive embed-responsive-16by9">
-
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/stjniziaxy4" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</div><!--//embed-responsive -->
-					</div><!--//col-->
-					<div class="col-12 col-md-6 mb-md-5">
-						<div class="embed-responsive embed-responsive-16by9">
-							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NPYqnGNO_zw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</div><!--//embed-responsive -->
-					</div><!--//col-->
-				</div><!--//row-->
-			</div><!--//container-->
-		</div><!--//media-block-->
+		
 	</section><!--//about-section-->
 
 	<section id="tickets-section" class="tickets-section section theme-bg-light">
