fixed ui issues

--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
 <section id="about-section" class="about-section section theme-bg-light">
   <div class="container">
     <h3 class="section-heading text-center mb-3">About <img width="280px" style="margin-top: -35px;" src="/assets/images/lanscape-logo-purple.png" alt="img" ></h3>
-    <div class="section-intro single-col-max mx-auto mb-4">ElixirConfAfr is an annual conference bringing together BEAM enthusiasts for collaboration, networking and learning.
+    <div class="section-intro single-col-max mx-auto mb-4 pb-5">ElixirConfAfr is an annual conference bringing together BEAM enthusiasts for collaboration, networking and learning.
       <br> <br>
       ElixirKenya brings you the first of many editions of Elixir Conference Africa. <br>
       This conference will be held virtually and is open to anyone from anywhere around the world, the event will incorporate among other things, technical and non technical talks, with the main focus being how Elixir has been used to craft technological solutions aimed at addressing problems and issues within and outside of Africa.
@@ -138,9 +138,9 @@
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
-              <li class="list-inline-item"><a  href="https://twitter.com/s_igu"><i class="fab fa-twitter fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://www.linkedin.com/in/sigu/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://github.com/sigu"><i class="fab fa-github fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://twitter.com/s_igu"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/sigu/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://github.com/sigu"><i class="fab fa-github fa-fw"></i></a></li>
             </ul><!--//social-list-->
           </div>
         </div><!--//card-->
@@ -157,9 +157,9 @@
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
-              <li class="list-inline-item"><a  href="https://twitter.com/cckyendereta"><i class="fab fa-twitter fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://www.linkedin.com/in/chantelle-kyendereta-70993719b/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://github.com/kyendereta/"><i class="fab fa-github fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://twitter.com/cckyendereta"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/chantelle-kyendereta-70993719b/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://github.com/kyendereta/"><i class="fab fa-github fa-fw"></i></a></li>
             </ul><!--//social-list-->
           </div>
         </div><!--//card-->
@@ -176,9 +176,9 @@
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
-              <li class="list-inline-item"><a  href="https://twitter.com/LeMusicalAddict"><i class="fab fa-twitter fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://www.linkedin.com/in/cmush"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://github.com/cmush"><i class="fab fa-github fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://twitter.com/LeMusicalAddict"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/cmush"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://github.com/cmush"><i class="fab fa-github fa-fw"></i></a></li>
             </ul><!--//social-list-->
           </div>
         </div><!--//card-->
@@ -195,9 +195,9 @@
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
-              <li class="list-inline-item"><a  href="https://twitter.com/Wanjiku_Mac"><i class="fab fa-twitter fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://www.linkedin.com/in/wanjiku-macharia-b4b95a94"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://gitlab.com/wanjiku_macharia"><i class="fab fa-github fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://twitter.com/Wanjiku_Mac"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/wanjiku-macharia-b4b95a94"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://gitlab.com/wanjiku_macharia"><i class="fab fa-github fa-fw"></i></a></li>
             </ul><!--//social-list-->
           </div>
         </div><!--//card-->
@@ -214,9 +214,9 @@
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
-              <li class="list-inline-item"><a  href="https://twitter.com/okothkongo"><i class="fab fa-twitter fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://www.linkedin.com/in/okoth-kongo-232633163/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://github.com/okothkongo/"><i class="fab fa-github fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://twitter.com/okothkongo"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/okoth-kongo-232633163/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://github.com/okothkongo/"><i class="fab fa-github fa-fw"></i></a></li>
             </ul><!--//social-list-->
           </div>
         </div><!--//card-->
@@ -233,9 +233,9 @@
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
-              <li class="list-inline-item"><a  href="https://twitter.com/PendoTracey"><i class="fab fa-twitter fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://www.linkedin.com/in/tracey-onim-420b3316a/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://github.com/TraceyOnim"><i class="fab fa-github fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://twitter.com/PendoTracey"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/tracey-onim-420b3316a/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://github.com/TraceyOnim"><i class="fab fa-github fa-fw"></i></a></li>
             </ul><!--//social-list-->
           </div>
         </div><!--//card-->
@@ -252,9 +252,9 @@
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
-              <li class="list-inline-item"><a  href="https://mobile.twitter.com/njoki_kiarieG"><i class="fab fa-twitter fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://www.linkedin.com/in/njoki-kiarie-4312528a"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://github.com/GraceKiarie"><i class="fab fa-github fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://mobile.twitter.com/njoki_kiarieG"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/njoki-kiarie-4312528a"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://github.com/GraceKiarie"><i class="fab fa-github fa-fw"></i></a></li>
             </ul><!--//social-list-->
           </div>
         </div><!--//card-->
@@ -271,9 +271,9 @@
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
-              <li class="list-inline-item"><a  href="https://twitter.com/P_Obuya"><i class="fab fa-twitter fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="https://www.linkedin.com/in/pollet-obuya-664436127/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href=""><i class="fab fa-github fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://twitter.com/P_Obuya"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/pollet-obuya-664436127/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" href=""><i class="fab fa-github fa-fw"></i></a></li>
             </ul><!--//social-list-->
           </div>
         </div><!--//card-->
@@ -292,9 +292,9 @@
         </div><!--//card-->
         <div class="card-footer text-muted">
           <ul class="social-list list-inline mb-0">
-            <li class="list-inline-item"><a  href="https://mobile.twitter.com/gettyorawo"><i class="fab fa-twitter fa-fw"></i></a></li>
-            <li class="list-inline-item"><a  href="https://www.linkedin.com/in/gettyorawo"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-            <li class="list-inline-item"><a  href="https://github.com/gettyorawo"><i class="fab fa-github fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://mobile.twitter.com/gettyorawo"><i class="fab fa-twitter fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/gettyorawo"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://github.com/gettyorawo"><i class="fab fa-github fa-fw"></i></a></li>
           </ul><!--//social-list-->
         </div>
       </div><!--//card-->
@@ -311,9 +311,9 @@
         </div><!--//card-->
         <div class="card-footer text-muted">
           <ul class="social-list list-inline mb-0">
-            <li class="list-inline-item"><a  href="https://mobile.twitter.com/ruyonga"><i class="fab fa-twitter fa-fw"></i></a></li>
-            <li class="list-inline-item"><a  href="https://www.linkedin.com/in/ruyongadaniel/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-            <li class="list-inline-item"><a  href="https://github.com/ruyonga"><i class="fab fa-github fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://mobile.twitter.com/ruyonga"><i class="fab fa-twitter fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/ruyongadaniel/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://github.com/ruyonga"><i class="fab fa-github fa-fw"></i></a></li>
           </ul><!--//social-list-->
         </div>
       </div><!--//card-->
@@ -330,9 +330,9 @@
         </div><!--//card-->
         <div class="card-footer text-muted">
           <ul class="social-list list-inline mb-0">
-            <li class="list-inline-item"><a  href="https://mobile.twitter.com/emeshmagak"><i class="fab fa-twitter fa-fw"></i></a></li>
-            <li class="list-inline-item"><a  href="https://www.linkedin.com/in/manuelgeek"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-            <li class="list-inline-item"><a  href="https://github.com/manuelgeek"><i class="fab fa-github fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://mobile.twitter.com/emeshmagak"><i class="fab fa-twitter fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/manuelgeek"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://github.com/manuelgeek"><i class="fab fa-github fa-fw"></i></a></li>
           </ul><!--//social-list-->
         </div>
       </div><!--//card-->
@@ -349,9 +349,9 @@
         </div><!--//card-->
         <div class="card-footer text-muted">
           <ul class="social-list list-inline mb-0">
-            <li class="list-inline-item"><a  href="https://mobile.twitter.com/reimoinyang"><i class="fab fa-twitter fa-fw"></i></a></li>
-            <li class="list-inline-item"><a  href="https://www.linkedin.com/in/imoinyang"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-            <li class="list-inline-item"><a  href="https://github.com/reimo"><i class="fab fa-github fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://mobile.twitter.com/reimoinyang"><i class="fab fa-twitter fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/imoinyang"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://github.com/reimo"><i class="fab fa-github fa-fw"></i></a></li>
           </ul><!--//social-list-->
         </div>
       </div><!--//card-->
@@ -364,7 +364,7 @@
 <!-- <section id="sponsors-section" class="sponsors-section section">
   <div class="container">
     <h3 class="section-heading text-center mb-3">Organizers</h3>
-    <div class="section-intro text-center single-col-max mx-auto mb-5">Comapnies Organizing</div>
+    <div class="section-intro text-center single-col-max mx-auto mb-5">Companies Organizing</div>
     <div class="row logos justify-content-center">
       <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-1.svg" alt="logo"></div>
       <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-2.svg" alt="logo"></div>
@@ -392,7 +392,7 @@
       <li class="list-inline-item mr-0"><a href="#"><i class="fab fa-youtube fa-fw"></i></a></li>
     </ul><!--//social-list-->
 
-    <small class="copyright">Made with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Kenya</a></small>
+    <small class="copyright">Made with <i class="fas fa-heart" style="color: #5A1E5B;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Kenya</a></small>
 
   </div><!--//container-->
 </footer>
