--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				<li class="list-inline-item mr-0"><a href="#"><i class="fab fa-youtube fa-fw"></i></a></li>
 			</ul><!--//social-list-->
 
-			<small class="copyright">Made with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Kenya</a></small>
+			<small class="copyright">Made with <i class="fas fa-heart" style="color: #5A1E5B;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Kenya</a></small>
 
 		</div><!--//container-->
 	</footer>
