fixed image sizes, colors

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 				<div class="hero-meta mb-3"><i class="far fa-calendar-alt mr-2"></i>7th - 8th May <i class="fas fa-map-marker-alt mx-2"></i>Virtual</div>
 				<div class="hero-intro mb-4">The Premiere Elixir Conference in <br> Africa</div>
 				<div class="hero-cta">
-					<a class="btn btn-secondary btn-lg" href="http://bit.ly/elixir-conf-africa" target="_blank">Get Tickets</a>
-					<a class="btn btn-secondary btn-lg" href="https://sessionize.com/elixir-conf-africa" target="_blank">Call For Speakers</a>
+					<a class="btn btn-secondary btn-lg mb-2" href="http://bit.ly/elixir-conf-africa" target="_blank">Get Tickets</a>
+					<a class="btn btn-secondary btn-lg mb-2" href="https://sessionize.com/elixir-conf-africa" target="_blank">Call For Speakers</a>
 				</div>
 
 			</div><!--//hero-text-block-->
