add tickets section

--- a/index.html
+++ b/index.html
@@ -125,8 +125,89 @@
 		</div><!--//container-->
 
 	</div><!--//hero-block-->
+	<section id="tickets-section" class="tickets-section section theme-bg-light">
+		<div class="container">
+			<h3 class="section-heading text-center mb-3">Tickets</h3>
+			<div class="section-intro single-col-max mx-auto text-center mb-4">All prices exclude fees</div>
 
-	<section id="about-section" class="about-section section theme-bg-light">
+			<div class="row pricing mb-5">
+				<div class="col-12 col-md-4 p-2 p-lg-4">
+					<div class="card rounded-0 border-0">
+						<div class="card-body p-0">
+							<div class="heading  text-center p-3">
+								<h4 class="text-white mb-0">Super Early Bird</h4>
+							</div>
+							<div class="info p-3">
+								<div class="price-figure text-center mb-3"><span class="currency">$</span><span class="number">0</span></div>
+								<div class="desc px-3">
+									This means you get a free ticket. However, we are in the course to seek support for this amazing event so if you feel the need to support this event kindly purchase your ticket on one of the other payment tiers that will work for you. Cheers!
+								</div>
+							</div><!--//info-->
+						</div><!--//card-body-->
+						<div class="card-footer text-center">
+							<a href="https://www.eventbrite.com/e/elixir-conf-africa-2021-tickets-142673256551" target="_blank" class="btn btn-primary disabled">SOLD OUT</a>
+						</div>
+					</div><!--//card-->
+        </div><!--//col-->
+				<div class="col-12 col-md-4 p-2 p-lg-4">
+					<div class="card rounded-0 border-0">
+						<div class="card-body p-0">
+							<div class="heading  text-center p-3">
+								<h4 class="text-white mb-0">Dhahabu ( Swahili for Gold)</h4>
+							</div>
+							<div class="info p-3">
+								<div class="price-figure text-center mb-3"><span class="currency">$</span><span class="number">200</span></div>
+								<div class="desc px-3">
+									This here is our standard Ticket package for ElixirConf Africa. We acknowledge the awesome talks, workshops and networks built during Elixir Conferences in other continents and we'd love to establish the stream of diversity within our attendees
+								</div>
+							</div><!--//info-->
+						</div><!--//card-body-->
+						<div class="card-footer text-center">
+							<a href="https://www.eventbrite.com/e/elixir-conf-africa-2021-tickets-142673256551" target="_blank" class="btn btn-primary">Buy Now</a>
+						</div>
+					</div><!--//card-->
+				</div><!--//col-->          
+				<div class="col-12 col-md-4 p-2 p-lg-4">
+					<div class="card rounded-0 border-0">
+						<div class="card-body p-0">
+							<div class="heading  text-center p-3">
+								<h4 class="text-white mb-0">Mhangura (Shona for Copper)</h4>
+							</div>
+							<div class="info p-3">
+								<div class="price-figure text-center mb-3"><span class="currency">$</span><span class="number">100</span></div>
+								<div class="desc px-3">
+									We understand that the event rates for other continents are way higher than this, but this being our first continental elixir community event we'd like African Beam Devs to come out in large numbers and not feel left out due to financial constraints
+								</div>
+							</div><!--//info-->
+						</div><!--//card-body-->
+						<div class="card-footer text-center">
+							<a href="https://www.eventbrite.com/e/elixir-conf-africa-2021-tickets-142673256551" target="_blank" class="btn btn-primary">Buy Now</a>
+						</div>
+					</div><!--//card-->
+				</div><!--//col-->        
+				<div class="col-12 col-md-4 p-2 p-lg-4">
+					<div class="card card-special rounded-0 border-0">
+						<div class="card-body p-0">
+							<div class="heading  text-center p-3">
+								<h4 class="text-white mb-0">Ekikomo (Luganda for Bronze)</h4>
+							</div>
+							<div class="info p-3">
+								<div class="price-figure text-center"><span class="currency">$</span><span class="number">2</span></div>
+								<div class="desc px-3">
+									We understand that some of our esteemed attendees might not be able to raise enough financially to attend the conference. So if by chance you are fortunate enough kindly use the other available payment tiers
+								</div>
+							</div><!--//info-->
+						</div><!--//card-body-->
+						<div class="card-footer text-center">
+							<a href="https://www.eventbrite.com/e/elixir-conf-africa-2021-tickets-142673256551" target="_blank" class="btn btn-primary">Buy Now</a>
+						</div>
+					</div><!--//card-->
+				</div><!--//col-->
+			</div><!--//pricing-->
+		</div>
+  </section>
+  
+	<section id="about-section" class="about-section section">
 		<div class="container">
 			<h3 class="section-heading text-center mb-3">About <img width="280px" style="margin-top: -35px;" src="/assets/images/lanscape-logo-purple.png" alt="img" ></h3>
 			<div class="section-intro single-col-max mx-auto mb-4">
@@ -141,7 +222,7 @@
 		</div><!--//container-->
 	</section><!--//about-section-->
 
-	<section id="sponsors-section" class="sponsors-section section">
+	<section id="sponsors-section" class="sponsors-section section theme-bg-light">
 		<div class="container">
 			<h3 class="section-heading text-center mb-3">Sponsors</h3>
 			<div class="section-intro text-center single-col-max mx-auto mb-5">
